--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@ My work is characterized by precision, commitment, and a keen eye for detail, en
 </article><article id="resume">
 <h2 class="major">Resume</h2>
 <ul>
-<li><a href="documents/KAREEM_BADR_CV.pdf" target="_blank">Download CV (PDF)</a></li>
+<li><a href="documents/KAREEM_BADR_CV.pdf" target="_blank">Download KAREEM BADR CV (PDF)</a></li>
 </ul>
 </article><article id="certificates">
 <h2 class="major">Certificates</h2>
 <ul>
-<li><a href="documents/CERTIFICATES.pdf" target="_blank">Download Certificates (PDF)</a></li>
+<li><a href="documents/CERTIFICATES.pdf" target="_blank">Download KAREEM BADR Certificates (PDF)</a></li>
 </ul>
 </article><article id="contact">
 <h2 class="major">Contact</h2>
